tests/ui/abi/interrupt-invalid-signature.x64.stderr
error: invalid signature for `extern "x86-interrupt"` function
  --> $DIR/interrupt-invalid-signature.rs:83:40
   |
LL | extern "x86-interrupt" fn x86_ret() -> u8 {
   |                                        ^^
   |
   = note: functions with the "custom" ABI cannot have a return type
help: remove the return type
  --> $DIR/interrupt-invalid-signature.rs:83:40
   |
LL | extern "x86-interrupt" fn x86_ret() -> u8 {
   |                                        ^^

error: aborting due to 1 previous error

